--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -19,7 +19,7 @@
     <section class="hero is-danger">
         <div class="hero-body">
             <div class="container content">
-                <h1 class="title">Universidad <em>Mesoamericana</em> Quetzaltenango</h1>
+                <h1 class="title">Universidad <em>Mesoamericana</em> Quetzaltenango, Guatemala</h1>
                 <h3 class="subtitle">
                     Vamos un paso adelante
                 </h3>
